--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">RetrofitApp2020</string>
+    <string name="hello_worldBlue"></string>
+    <string name="welcome">Welcome to <b>Android</b>!</string>
+
 </resources>
